--- a/src/classes/B.cls
+++ b/src/classes/B.cls
@@ -6,7 +6,9 @@ public static testmethod void fun(){
 
 A a = new A();
 a.addContact(); // added by Pawan
-a.addCase();
+a.addCase();    // added by Pawan
+a.addOpportunity(); // added by Apex
+
 }
 
 
